--- a/Assets/CSS/index.css
+++ b/Assets/CSS/index.css
@@ -1,7 +1,7 @@
 body{
     background-color: burlywood;
 }
-/* .tips_box{
+.tips_box{
     box-sizing: border-box;
     border-style: ridge;
     border-radius: 10px;
@@ -10,7 +10,7 @@ body{
     box-shadow: lightgray;
     background-color: white;
 }
-.start-button{
+/* .start-button{
     text-align: center;
     font-size: xx-large;
     color:blueviolet;
@@ -22,4 +22,4 @@ body{
     text-align: center;
     font-weight: lighter;
     font-size: x-large;
-} */
+}  */
