text-aligned the start button to center

--- a/Assets/CSS/index.css
+++ b/Assets/CSS/index.css
@@ -10,7 +10,7 @@ body{
     box-shadow: lightgray;
     background-color: white;
 }
-/* .start-button{
+ .start-button{
     text-align: center;
     font-size: xx-large;
     color:blueviolet;
@@ -18,8 +18,8 @@ body{
     border-radius: 5px;
     cursor: pointer;
 }
-.tips_box .tips_title{
+/* .tips_box .tips_title{
     text-align: center;
     font-weight: lighter;
     font-size: x-large;
-}  */
+}   */
