changed the display of the content box

--- a/Assets/CSS/index.css
+++ b/Assets/CSS/index.css
@@ -18,8 +18,19 @@ body{
     border-radius: 5px;
     cursor: pointer;
 }
-/* .tips_box .tips_title{
+.tips_box .tips_title{
     text-align: center;
     font-weight: lighter;
     font-size: x-large;
-}   */
+}  
+/* .content_box{
+    display: flex;
+}
+#scoreCard{
+    background-color:white;
+    height: 100px;
+    width:400px;
+    margin-top: 50px;
+    margin-left: 500px;
+    padding-left: 30px;
+} */
